Added "Logan Nathanson" as a client.

--- a/index.html
+++ b/index.html
@@ -64,15 +64,18 @@
 
         <div class="client-area brand-integration-area">
             <hr>
-            <h1 class="client-work thin-title scrollToOffset" id="client" style="margin-bottom:5vmin;">BRAND INTEGRATIONS</h1>
+            <h1 class="client-work thin-title scrollToOffset" id="client" style="margin-bottom:5vmin;">BRAND
+                INTEGRATIONS</h1>
             <ul class="brands">
-                <li><a href="https://uk.manscaped.com/"><img style="margin-top:5vmin;" src="img/brands/man.png" alt=""></a></li>
-                <li><a href="https://raidshadowlegends.com/"></a><img style="margin-top:2vmin;" src="img/brands/pia.png" alt=""></a></li>
+                <li><a href="https://uk.manscaped.com/"><img style="margin-top:5vmin;" src="img/brands/man.png"
+                            alt=""></a></li>
+                <li><a href="https://raidshadowlegends.com/"></a><img style="margin-top:2vmin;" src="img/brands/pia.png"
+                        alt=""></a></li>
                 <li><a href="https://www.privateinternetaccess.com/"></a><img src="img/brands/raid.png" alt=""></a></li>
             </ul>
         </div>
 
-        
+
 
         <div class="client-area" style="margin-top: 26vmin">
             <hr>
@@ -118,6 +121,56 @@
 
                     <div class="video-container col s6">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/coqmaPilyGg"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="workarea">
+            <div class="video-grid-text">
+                <h1><a href="https://www.instagram.com/nimbus_coffee_la/">Logan Nathanson</a></h1>
+                <p class="video-grid-paragraph">
+                    Logan is a veteran creator with a massive following over on his <a href="https://www.tiktok.com/@ourfavoritefinds?lang=en">TikTok</a>. <br><br>
+                    He creating weekly videos around all sorts of wacky gadgets and came to
+                    me in order to kickstart his Youtube page. I have been his primary editor on both his TikToks and
+                    his Youtube for over a year now
+                </p>
+            </div>
+
+            <div class="video-grid">
+                <div class="row">
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/0b5eZaHyTgw"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/o3H8qPDSWW8"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/OoahYaiup4c"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/KD4yPU-52JI"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
@@ -178,7 +231,10 @@
         <div class="workarea">
             <div class="video-grid-text">
                 <h1><a href="https://www.youtube.com/c/TheMiseryMachine">Misery Machine</a></h1>
-                <p class="video-grid-paragraph">Drew and Yergy run a true crime storytelling channel that uploads a bone chilling episode once per week. <br><br> I was brought on as their primary editor to enhance their videos and make them more immersive to the viewer through the use of SFX, color grading and motion graphics.
+                <p class="video-grid-paragraph">Drew and Yergy run a true crime storytelling channel that uploads a bone
+                    chilling episode once per week. <br><br> I was brought on as their primary editor to enhance their
+                    videos and make them more immersive to the viewer through the use of SFX, color grading and motion
+                    graphics.
                 </p>
             </div>
 
@@ -220,7 +276,7 @@
                 </div>
 
             </div>
-        </div>   
+        </div>
 
         <div class="workarea">
             <div class="video-grid-text">
