--- a/index.html
+++ b/index.html
@@ -134,10 +134,11 @@
             <div class="video-grid-text">
                 <h1><a href="https://www.instagram.com/nimbus_coffee_la/">Logan Nathanson</a></h1>
                 <p class="video-grid-paragraph">
-                    Logan is a veteran creator with a massive following over on his <a href="https://www.tiktok.com/@ourfavoritefinds?lang=en">TikTok</a>. <br><br>
-                    He creating weekly videos around all sorts of wacky gadgets and came to
-                    me in order to kickstart his Youtube page. I have been his primary editor on both his TikToks and
-                    his Youtube for over a year now
+                    Logan is a veteran creator with a massive following over on his <a
+                        href="https://www.tiktok.com/@ourfavoritefinds?lang=en">TikTok</a>. <br><br>
+                    He creates weekly videos around all sorts of wacky gadgets and came to me in order to kickstart his
+                    Youtube page. I have been his primary editor on both his TikToks and his Youtube for over a year
+                    now.
                 </p>
             </div>
 
