Replaced twitter URL with Discord friend URL

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#skills"> Skills & Experience</a></li>
             <li><a href="#client"> Client Work</a></li>
         </ul>
-        <a href="https://twitter.com/EditorDannyS" target="_blank"><img class="icons" src="img/twitter-xxl.png"
+        <a href="https://discord.gg/u5npCca5" target="_blank"><img class="icons" src="img/discord.png"
                 alt="twitter icon"></img></a>
         <a href="mailto:mrsavagework@gmail.com" target="_blank"><img class="icons" style="filter: brightness(0) invert(1);
             " src="img/mail.png" alt="twitter icon"></img></a>
