--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 <div class="footer-info">
                     <h3>DANNY SAVAGE</h3>
                     <p>Professional Video Editor</p>
-                    <p>Based in London, UK | Working Worldwide</p>
+                    <p>Based in Portsmouth, UK | Working Worldwide</p>
                 </div>
                 <div class="footer-contact">
                     <h3>CONTACT</h3>
@@ -408,7 +408,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Danny Savage. All rights reserved.</p>
+                <p>&copy; 2025 Danny Savage. All rights reserved.</p>
             </div>
         </div>
     </footer>
