particle test. (Might remove?)

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="stylesheet" href="css/modern.css">
+    <link rel="stylesheet" href="css/particles.css">
     <title>Danny Savage | Professional Video Editor</title>
 </head>
 
 <body>
+    <div id="particles-js"></div>
+    
     <div class="progress-container">
         <div class="progress-bar" id="myBar"></div>
     </div>
@@ -415,6 +418,8 @@
 
     <script src="js/jquery.js"></script>
     <script src="js/materialize.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="js/particles.js"></script>
     <script src="js/modern.js"></script>
 </body>
 
