Added client scroll button

--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
         </div>
 
         <div class="client-section" id="client">
+            <div class="floating-arrow" id="nextClientArrow">
+                <span class="material-icons">arrow_downward</span>
+            </div>
             <div class="container">
                 <h1 class="section-title">CLIENT WORK</h1>
                 
