Added new client

--- a/index.html
+++ b/index.html
@@ -370,6 +370,64 @@
                     </div>
                 </div>
 
+                <!-- PilotPhotog -->
+                <div class="client-card">
+                    <div class="client-info">
+                        <h2><a href="https://www.youtube.com/@PilotPhotog" target="_blank">PilotPhotog</a></h2>
+                        <div class="client-tags">
+                            <span class="client-tag">Storytelling</span>
+                            <span class="client-tag">History</span>
+                            <span class="client-tag">Video Essay</span>
+                        </div>
+                    </div>
+
+                    <div class="video-gallery">
+                        <div class="video-row">
+                            <div class="video-item">
+                                <div class="video-container">
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Wm2hW0XjTDs"
+                                        title="YouTube video player" frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen>
+                                    </iframe>
+                                </div>
+                            </div>
+
+                            <div class="video-item">
+                                <div class="video-container">
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/GDc-6ajzxN8"
+                                        title="YouTube video player" frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen>
+                                    </iframe>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="video-row">
+                            <div class="video-item">
+                                <div class="video-container">
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/si5YyX5YavI"
+                                        title="YouTube video player" frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen>
+                                    </iframe>
+                                </div>
+                            </div>
+
+                            <div class="video-item">
+                                <div class="video-container">
+                                    <iframe width="560" height="315" src=" https://www.youtube.com/embed/sQWt2vkUREs"
+                                        title="YouTube video player" frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen>
+                                    </iframe>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- After Effects Work -->
                 <div class="client-card">
                     <div class="client-info">
